--- a/SpringMVC/springmvc-04-annotation/pom.xml
+++ b/SpringMVC/springmvc-04-annotation/pom.xml
@@ -11,4 +11,24 @@
 
     <artifactId>springmvc-04-annotation</artifactId>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
