--- a/SpringMVC/pom.xml
+++ b/SpringMVC/pom.xml
@@ -15,6 +15,7 @@
         <module>springmvc-04-annotation</module>
         <module>springmvc-05-controller</module>
         <module>springmvc-06-json</module>
+        <module>springmvc-07-ajax</module>
     </modules>
 
     <dependencies>
