--- a/SpringMVC/pom.xml
+++ b/SpringMVC/pom.xml
@@ -16,6 +16,8 @@
         <module>springmvc-05-controller</module>
         <module>springmvc-06-json</module>
         <module>springmvc-07-ajax</module>
+        <module>springmvc-08-interceptor</module>
+        <module>springmvc-09-file</module>
     </modules>
 
     <dependencies>
