--- a/SpringBoot/springboot-06-mybatis/pom.xml
+++ b/SpringBoot/springboot-06-mybatis/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.komorebi</groupId>
-    <artifactId>springboot-05-data</artifactId>
+    <artifactId>springboot-06-mybatis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-05-data</name>
+    <name>springboot-06-mybatis</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -19,21 +19,10 @@
     </properties>
 
     <dependencies>
-        <!--Druid-->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.2.4</version>
-        </dependency>
-        <!--Log4j-->
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -43,6 +32,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
