--- a/SpringCloud/pom.xml
+++ b/SpringCloud/pom.xml
@@ -11,6 +11,9 @@
         <module>springcloud-api</module>
         <module>springcloud-provider-dept-8001</module>
         <module>springcloud-consumer-dept-80</module>
+        <module>springcloud-eureka-7001</module>
+        <module>springcloud-eureka-7002</module>
+        <module>springcloud-eureka-7003</module>
     </modules>
 
     <!--打包方式 pom-->
