--- a/SpringCloud/springcloud-provider-dept-8001/pom.xml
+++ b/SpringCloud/springcloud-provider-dept-8001/pom.xml
@@ -19,6 +19,18 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- Eureka-Provider -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+        <!--actuator完善监控信息-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
