--- a/SpringCloud/springcloud-eureka-7001/pom.xml
+++ b/SpringCloud/springcloud-eureka-7001/pom.xml
@@ -12,11 +12,11 @@
     <artifactId>springcloud-eureka-7001</artifactId>
 
     <dependencies>
-        <!-- Eureka-server -->
+        <!-- Eureka-Server -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>3.0.1</version>
+            <version>2.2.6.RELEASE</version>
         </dependency>
         <!--热部署-->
         <dependency>
