--- a/SpringCloud/springcloud-eureka-7002/pom.xml
+++ b/SpringCloud/springcloud-eureka-7002/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>3.0.1</version>
+            <version>2.2.6.RELEASE</version>
         </dependency>
         <!--热部署-->
         <dependency>
