--- a/SpringCloud/springcloud-eureka-7003/src/main/resources/application.yml
+++ b/SpringCloud/springcloud-eureka-7003/src/main/resources/application.yml
@@ -8,4 +8,4 @@ eureka:
     fetch-registry: false           # 如果为false，则表示自己为注册中心
     service-url:                    # 监控页面
 #      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-      defaultZone: http://localhost:7001/eureka/,http://localhost:7002/eureka/
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
