--- a/SpringCloud/springcloud-provider-dept-8001/pom.xml
+++ b/SpringCloud/springcloud-provider-dept-8001/pom.xml
@@ -19,11 +19,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- Eureka-Provider -->
+        <!-- Eureka-Client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>1.4.7.RELEASE</version>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.2.6.RELEASE</version>
         </dependency>
         <!--actuator完善监控信息-->
         <dependency>
