--- a/SpringCloud/pom.xml
+++ b/SpringCloud/pom.xml
@@ -14,6 +14,9 @@
         <module>springcloud-eureka-7001</module>
         <module>springcloud-eureka-7002</module>
         <module>springcloud-eureka-7003</module>
+        <module>springcloud-consumer-dept-feign</module>
+        <module>springcloud-provider-dept-hystrix-8001</module>
+        <module>springcloud-consumer-hystrix-dashboard</module>
     </modules>
 
     <!--打包方式 pom-->
