--- a/SpringCloud/springcloud-provider-dept-hystrix-8001/pom.xml
+++ b/SpringCloud/springcloud-provider-dept-hystrix-8001/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-provider-dept-8001</artifactId>
+    <artifactId>springcloud-provider-dept-hystrix-8001</artifactId>
 
     <dependencies>
-        <!--Hystrix-->
+        <!--hystrix-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
@@ -78,4 +78,5 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
     </dependencies>
+
 </project>
