--- a/SpringCloud/pom.xml
+++ b/SpringCloud/pom.xml
@@ -17,6 +17,8 @@
         <module>springcloud-consumer-dept-feign</module>
         <module>springcloud-provider-dept-hystrix-8001</module>
         <module>springcloud-consumer-hystrix-dashboard</module>
+        <module>springcloud-zuul-9527</module>
+        <module>springcloud-config-server-3344</module>
     </modules>
 
     <!--打包方式 pom-->
