--- a/SpringCloud/pom.xml
+++ b/SpringCloud/pom.xml
@@ -19,6 +19,7 @@
         <module>springcloud-consumer-hystrix-dashboard</module>
         <module>springcloud-zuul-9527</module>
         <module>springcloud-config-server-3344</module>
+        <module>springcloud-config-client-8201</module>
     </modules>
 
     <!--打包方式 pom-->
